--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usb-paint",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A universal, simple, and beautiful hand-drawn style painting tool, USB-Paint. It can be introduced and used in any front-end framework or page.",
   "repository": "https://github.com/goodlovess/USB-Paint.git",
   "type": "module",
@@ -53,6 +53,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.7",
     "sass": "^1.80.3",
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.4",
@@ -74,7 +75,6 @@
     ]
   },
   "dependencies": {
-    "perfect-freehand": "^1.2.2",
-    "prettier-plugin-svelte": "^3.2.7"
+    "perfect-freehand": "^1.2.2"
   }
 }
